RESOLVED FIXED63662
DFG JIT does not do put_by_id transition caching.
https://bugs.webkit.org/show_bug.cgi?id=63662
Summary DFG JIT does not do put_by_id transition caching.
Filip Pizlo
Reported 2011-06-29 15:14:35 PDT
The baseline JIT emits a stub specialized for put_by_id transitions (i.e. setting a property that did not previous exist in the object, thereby resulting in a structure transition). The DFG JIT emits a slow C call. The DFG JIT should really be emitting an optimized stub, like the baseline JIT.
Attachments
the patch (10.92 KB, patch)
2011-06-29 15:37 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2011-06-29 15:37:33 PDT
Created attachment 99161 [details] the patch This patch takes us from a 20% slow-down in v8-raytrace to a 4% speed-up on v8-raytrace. We no longer have large regressions on any v8 benchmark (all v8 benchmarks are now speed-ups, no effect, or <5% slowdowns).
WebKit Review Bot
Comment 2 2011-06-29 16:45:40 PDT
Comment on attachment 99161 [details] the patch Clearing flags on attachment: 99161 Committed r90063: <http://trac.webkit.org/changeset/90063>
WebKit Review Bot
Comment 3 2011-06-29 16:45:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.