2011-06-29  Filip Pizlo  <fpizlo@apple.com>

Reviewed by Gavin Barraclough.

        DFG JIT does not do put_by_id transition caching.
        https://bugs.webkit.org/show_bug.cgi?id=63662

        * dfg/DFGJITCodeGenerator.cpp:
        (JSC::DFG::JITCodeGenerator::cachedPutById):
        * dfg/DFGJITCompiler.h:
        (JSC::DFG::JITCompiler::addPropertyAccess):
        * dfg/DFGRepatch.cpp:
        (JSC::DFG::testPrototype):
        (JSC::DFG::tryCachePutByID):

Canonical link: https://commits.webkit.org/79344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90063 268f45cc-cd09-0410-ab3c-d52691b4dbfc